--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,12 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
+    <ul>
+        {% for mt in mountain %}
+        <li><a href="/mountain/{{ mt }}">{{mt}}</a></li>
+        {% endfor %}
+
+    </ul>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
