--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,15 +6,20 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        
+          
+          <li class="nav-item">
+            <a class="nav-link" href="{{url_for('name')}}">Name</a>
+          </li>
+
           <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
           </li>
+         
           
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <button class="btn btn-outline-secondary" type="submit">Search</button>
         </form>
       </div>
     </div>
