--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -9,14 +9,13 @@
     </div>
     
 {% endfor %}
+
 {% if name %}
     <h1>Hello {{ name }}</h1>
     <br/>
-    <img src="{{url_for('static',filename='images/pexels-thibaut-tattevin.jpg')}}" width="1100">
-    <p id="demo"></p>
-    <script src="{{url_for('static',filename='js/myfile.js')}}"></script>
+    
 {% else %}
-    <h1>What's Your Name?</h1>
+    <h1>User List:</h1>
     <br/>
     <form method="POST">
         {{ form.hidden_tag() }}
@@ -24,8 +23,15 @@
         {{ form.name.label(class="form-label") }}
         {{ form.name(class="form-control") }}
         <br/>
+        {{ form.email.label(class="form-label") }}
+        {{ form.email(class="form-control") }}
+        <br/>
         {{ form.submit(class="btn btn-secondary") }}
     </form>
+    <br/><br/><br/>
+    {% for our_user in our_users %}
+        {{ our_user.id }} - {{ our_user.name }} - {{ our_user.email}} <br/>
+    {% endfor %}
 {% endif %}
 
 {% endblock %}
