--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,6 +12,9 @@
           </li>
 
           <li class="nav-item">
+            <a class="nav-link" href="{{url_for('add_user')}}">Add User</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
           </li>
          
