--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -12,7 +12,10 @@
 
 {% if name %}
     <h1>Hello {{ name }}</h1>
-    <br/>
+    <br/><br/>
+    {% for our_user in our_users %}
+        {{ our_user.id }} - {{ our_user.name }} - {{ our_user.email}} <br/>
+    {% endfor %}
     
 {% else %}
     <h1>User List:</h1>
