--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -13,28 +13,38 @@
 {% if name %}
     <h1>Hello {{ name }}</h1>
     <br/><br/>
-    {% for our_user in our_users %}
-        {{ our_user.id }} - {{ our_user.name }} - {{ our_user.email}} <br/>
-    {% endfor %}
-    
+    <table class="table table-striped table-hover table-bordered">
+        {% for our_user in our_users %}
+        <tr>
+            <td>{{ our_user.id }} - {{ our_user.name }} - {{ our_user.email}}</td>
+        </tr>
+        {% endfor %}
+    </table>
 {% else %}
-    <h1>User List:</h1>
-    <br/>
-    <form method="POST">
-        {{ form.hidden_tag() }}
-
-        {{ form.name.label(class="form-label") }}
-        {{ form.name(class="form-control") }}
-        <br/>
-        {{ form.email.label(class="form-label") }}
-        {{ form.email(class="form-control") }}
-        <br/>
-        {{ form.submit(class="btn btn-secondary") }}
-    </form>
+   
+    <br/><div class="shadow p-3 mb-5 bg-body rounded">
+        <form method="POST">
+            {{ form.hidden_tag() }}
+    
+            {{ form.name.label(class="form-label") }}
+            {{ form.name(class="form-control") }}
+            <br/>
+            {{ form.email.label(class="form-label") }}
+            {{ form.email(class="form-control") }}
+            <br/>
+            {{ form.submit(class="btn btn-secondary") }}
+        </form>
+    </div>
+   
     <br/><br/><br/>
-    {% for our_user in our_users %}
-        {{ our_user.id }} - {{ our_user.name }} - {{ our_user.email}} <br/>
-    {% endfor %}
+    <h1>User List:</h1>
+    <table class="table table-striped table-hover table-bordered">
+        {% for our_user in our_users %}
+        <tr>
+            <td>{{ our_user.id }}. <a href="{{url_for('update', id=our_user.id)}}" >{{ our_user.name }}</a> - {{ our_user.email}}</td>
+        </tr>
+        {% endfor %}
+    </table>
 {% endif %}
 
 {% endblock %}
