make delete button to delete user

--- a/templates/update.html
+++ b/templates/update.html
@@ -34,6 +34,8 @@
             {{ form.hobby(class="form-control", value=name_to_update.hobby) }}
             <br/>
             {{ form.submit(class="btn btn-secondary") }}
+
+            <a href="{{url_for('delete', id=id)}}" class="btn btn-danger">Delete</a>
         </form>
     </div>
     <br/><br/><br/>
