--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -45,7 +45,12 @@
     <table class="table table-striped table-hover table-bordered">
         {% for our_user in our_users %}
         <tr>
-            <td>{{ our_user.id }}. <a href="{{url_for('update', id=our_user.id)}}" >{{ our_user.name }}</a> - {{ our_user.email}} - {{ our_user.hobby }}</td>
+            <td>{{ our_user.id }}. 
+                <a href="{{url_for('update', id=our_user.id)}}" >{{ our_user.name }}</a> - 
+                {{ our_user.email}} - 
+                {{ our_user.hobby }} -
+                <a href="{{url_for('delete', id=our_user.id)}}" >Delete</a> 
+            </td>
         </tr>
         {% endfor %}
     </table>
