--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,6 +11,12 @@
             <a class="nav-link" href="{{url_for('add_user')}}">Add User</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{{url_for('add_post')}}">Add Post</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{url_for('posts')}}">Posts</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
           </li>
          
