--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 {% for message in get_flashed_messages() %}
-    <div class="alert alert-success alert-dismissible fade show mt-3" role="alert">
+    <div class="alert alert-info alert-dismissible fade show mt-3" role="alert">
         {{ message }}
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
@@ -28,6 +28,9 @@
     
             {{ form.name.label(class="form-label") }}
             {{ form.name(class="form-control") }}
+            <br/>
+            {{ form.username.label(class="form-label") }}
+            {{ form.username(class="form-control") }}
             <br/>
             {{ form.email.label(class="form-label") }}
             {{ form.email(class="form-control") }}
@@ -54,10 +57,12 @@
         {% for our_user in our_users %}
         <tr>
             <td>{{ our_user.id }}. 
-                <a href="{{url_for('update', id=our_user.id)}}" >{{ our_user.name }}</a> - 
-                {{ our_user.email}} - 
-                {{ our_user.hobby }} - 
-                <a href="{{url_for('delete', id=our_user.id)}}" >Delete</a> 
+                <!-- <a href="{{url_for('update', id=our_user.id)}}" >{{ our_user.name }}</a> -  -->
+                {{ our_user.name }} -
+                {{ our_user.username }} 
+                {% if current_user.is_authenticated %}
+                    <a href="{{url_for('delete', id=our_user.id)}}" > - Delete</a> 
+                {% endif %}
             </td>
         </tr>
         {% endfor %}
