add new features to blog project

--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -17,9 +17,7 @@
         {{ form.title.label(class="form-label") }}
         {{ form.title(class="form-control") }}
         <br/>
-        {{ form.author.label(class="form-label") }}
-        {{ form.author(class="form-control") }}
-        <br/>
+
         {{ form.slug.label(class="form-label") }}
         {{ form.slug(class="form-control") }}
         <br/>
@@ -31,6 +29,9 @@
         {{ form.submit(class="btn btn-secondary") }}
         
     </form>
+
+    {{ ckeditor.load() }}
+    {{ ckeditor.config(name='content') }}
 </div>
 
 {% endblock %}
