--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -20,9 +20,6 @@
         {{ form.title.label(class="form-label") }}
         {{ form.title(class="form-control") }}
         <br/>
-        {{ form.author.label(class="form-label") }}
-        {{ form.author(class="form-control") }}
-        <br/>
         {{ form.slug.label(class="form-label") }}
         {{ form.slug(class="form-control") }}
         <br/>
@@ -33,6 +30,9 @@
 
         {{ form.submit(class="btn btn-secondary") }}
     </form>
+
+    {{ ckeditor.load() }}
+    {{ ckeditor.config(name='content') }}
 </div>
 <a href = "{{url_for('posts')}}" class="btn btn-outline-secondary btn-sm">Back To Posts</a>
 
