--- a/templates/post.html
+++ b/templates/post.html
@@ -15,11 +15,11 @@
 
 <div class="shadow p-3 mb-5 bg-body rounded">
     <h3>{{ post.title }}</h3>
-    <small>By: {{ post.author }} | {{ post.date_posted }}</small><br/><br/>
-    {{ post.content }}<br/><br/>
+    <small>By: {{ post.poster.name }} | {{ post.date_posted }}</small><br/><br/>
+    {{ post.content|safe }}<br/><br/>
    
 </div>
-{% if current_user.is_authenticated %}
+{% if current_user.is_authenticated and post.poster_id == current_user.id %}
     <a href = "{{url_for('edit_post', id=post.id)}}" class="btn btn-outline-secondary btn-sm">Edit Post</a>
     <a href = "{{url_for('delete_post', id=post.id)}}" class="btn btn-outline-danger btn-sm">Delete Post</a>
 {% endif %} 
