--- a/templates/update.html
+++ b/templates/update.html
@@ -10,14 +10,8 @@
     
 {% endfor %}
 
-{% if name %}
-    <h1>Update user</h1>
-    <br/><br/>
-    {% for our_user in our_users %}
-        {{ our_user.id }} - {{ our_user.name }} - {{ our_user.email}} - {{ our_user.hobby }} <br/>
-    {% endfor %}
-    
-{% else %} 
+{% if id == current_user.id %}
+
     <h1>Update user</h1>
     <br/>
     <div class="shadow p-3 mb-5 bg-body rounded">
@@ -27,6 +21,9 @@
             {{ form.name.label(class="form-label") }}
             {{ form.name(class="form-control", value=name_to_update.name) }}
             <br/>
+            {{ form.username.label(class="form-label") }}
+            {{ form.username(class="form-control", value=name_to_update.username) }}
+            <br/>
             {{ form.email.label(class="form-label") }}
             {{ form.email(class="form-control", value=name_to_update.email) }}
             <br/>
@@ -35,11 +32,19 @@
             <br/>
             {{ form.submit(class="btn btn-secondary") }}
 
-            <a href="{{url_for('delete', id=id)}}" class="btn btn-danger">Delete</a>
+            
         </form>
     </div>
     <br/><br/><br/>
-    
+{% else %}   
+<div class="alert alert-info alert-dismissible fade show mt-3" role="alert">
+    Error!
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+
+<h1>Access denied!</h1>
+<p>Sorry, you cannot access this profile.</p>
 {% endif %}
+    
 
 {% endblock %}
