--- a/templates/post.html
+++ b/templates/post.html
@@ -16,7 +16,11 @@
 <div class="shadow p-3 mb-5 bg-body rounded">
     <h3>{{ post.title }}</h3>
     <small>By: {{ post.poster.name }} | {{ post.date_posted }}</small><br/><br/>
-    {{ post.content|safe }}<br/><br/>
+    {{ post.content|safe }}<br/>
+    
+    {% if post.poster.about_author %}
+        {{ post.poster.about_author }}
+    {% endif %}
    
 </div>
 {% if current_user.is_authenticated and post.poster_id == current_user.id %}
