--- a/templates/search.html
+++ b/templates/search.html
@@ -2,11 +2,29 @@
 {% block content %}
 
     <br/>
-    <h2>You searched for...</h2>
-    {{ searched }}
+    <h2>You searched for: <em>{{ searched }}</em></h2>
+    
     <br/>
 
-    {% for post in posts %}
-        <a href="{{url_for('post',id=post.id)}}">{{ post.title }}</a> <br/>
-    {% endfor %}
+    {% if posts %}
+        {% for post in posts %}
+        <div class="shadow p-3 mb-5 bg-body rounded">
+            <h3>{{ post.title }}</h3>
+            <small>By: {{ post.poster.name }} | {{ post.date_posted }}</small><br/><br/>
+            {{ post.content|safe }}<br/><br/>
+            <a href = "{{url_for('post', id=post.id)}}" class="btn btn-outline-secondary btn-sm">View Post</a>
+            
+            {% if current_user.is_authenticated and post.poster_id == current_user.id %}
+                <a href = "{{url_for('edit_post', id=post.id)}}" class="btn btn-outline-secondary btn-sm">Edit Post</a>
+                <a href = "{{url_for('delete_post', id=post.id)}}" class="btn btn-outline-danger btn-sm">Delete Post</a>
+            {% endif%}
+            
+        </div>
+
+            
+
+        {% endfor %}
+    {% else %}
+    <h2></h2> Sorry! <strong>{{ searched }}</strong> was not found.</h2>
+    {% endif %}
 {% endblock %}
