--- a/templates/update.html
+++ b/templates/update.html
@@ -30,6 +30,9 @@
             {{ form.hobby.label(class="form-label") }}
             {{ form.hobby(class="form-control", value=name_to_update.hobby) }}
             <br/>
+            {{ form.about_author.label(class="form-label") }}
+            {{ form.about_author(class="form-control", value=name_to_update.about_author) }}
+            <br/>
             {{ form.submit(class="btn btn-secondary") }}
 
             
