--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,9 +6,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            
           
-         
-             
           <li class="nav-item">
             <a class="nav-link" href="{{url_for('posts')}}">Posts</a>
           </li>
@@ -27,25 +26,21 @@
               <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
             </li>
           {% else %}  
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="{{url_for('add_user')}}">Register</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{{url_for('login')}}">Login</a>
-            </li>
+            </li> -->
           {% endif %}
           
        
-          
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
          
           
         </ul>
         <form class="d-flex" method="POST" action="{{url_for('search')}}">
           {{ form.hidden_tag() }}
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="searched">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="searched" required>
           <button class="btn btn-outline-secondary" type="submit">Search</button>
         </form>
       </div>
