--- a/templates/posts.html
+++ b/templates/posts.html
@@ -15,15 +15,15 @@
 {% for post in posts %}
 <div class="shadow p-3 mb-5 bg-body rounded">
     <h3>{{ post.title }}</h3>
-    <small>By: {{ post.poster.name }} | {{ post.date_posted }}</small><br/><br/>
-    {{ post.content|safe }}<br/>
+    <small>By: {{ post.poster.name }} | {{ post.date_posted | datetimefilter('%Y-%m-%d') }}</small><br/><br/>
+    <span class="truncate-text">{{ post.content|safe }}</span><br/>
     {% if post.poster.about_author %}
         {{ post.poster.about_author }}
     {% endif %}
     <br/><br/>
     <a href = "{{url_for('post', id=post.id)}}" class="btn btn-outline-secondary btn-sm">View Post</a>
     
-    {% if current_user.is_authenticated and post.poster_id == current_user.id %}
+    {% if current_user.is_authenticated and current_user.id == 4 %}
         <a href = "{{url_for('edit_post', id=post.id)}}" class="btn btn-outline-secondary btn-sm">Edit Post</a>
         <a href = "{{url_for('delete_post', id=post.id)}}" class="btn btn-outline-danger btn-sm">Delete Post</a>
     {% endif%}
