--- a/templates/posts.html
+++ b/templates/posts.html
@@ -14,7 +14,7 @@
 
 {% for post in posts %}
 <div class="shadow p-3 mb-5 bg-body rounded">
-    <h3>{{ post.title }} | {{ post.id }}</h3>
+    <h3>{{ post.title }}</h3>
     <small>By: {{ post.poster.name }} | {{ post.date_posted | datetimefilter('%Y-%m-%d') }}</small><br/><br/>
     <span class="truncate-text">{{ post.content|safe }}</span><br/>
     {% if post.poster.about_author %}
@@ -23,7 +23,8 @@
     <br/><br/>
     <a href = "{{url_for('post', id=post.id)}}" class="btn btn-outline-secondary btn-sm">View Post</a>
     
-    {% if current_user.is_authenticated and current_user.id == 4 %}
+    {% if current_user.is_authenticated
+         %}
         <a href = "{{url_for('edit_post', id=post.id)}}" class="btn btn-outline-secondary btn-sm">Edit Post</a>
         <a href = "{{url_for('delete_post', id=post.id)}}" class="btn btn-outline-danger btn-sm">Delete Post</a>
     {% endif%}
