--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,3 +28,16 @@ body {
     overflow: hidden;
     border-radius: 50%;
 }
+
+
+.custom-post-image {
+  max-width: 100%; 
+  width: 40rem;   
+  height: 20rem;  
+  object-fit: cover;
+}
+
+.card > .custom-post-image{
+  width: 30rem;   
+  height: 14rem;  
+}
