--- a/templates/index.html
+++ b/templates/index.html
@@ -19,22 +19,28 @@
     </div>
   </div>
 
-
 <div class="album py-2 bg-light">
     <div class="container">
         <h1 class="fs-3 p-2">Featured posts</h1>
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         {% for post in posts %}
-        <div class="col">
+      <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+            {% if post.post_img %}
+            <!-- <img class="float-end rounded-custom" src="{{ url_for('static', filename='images/'+ post.poster.profile_pic) }}" width="150"> -->
+            <img src="{{ url_for('static', filename='images/post/'+ post.post_img) }}" class="img-fluid custom-post-image ">
+            {% else %}
+                <!-- <img class="float-end" src="{{ url_for('static', filename='images/default_profile.png') }}" width="150"> -->
+                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="41%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+            {% endif %}
+            
 
             <div class="card-body custom-card-body">
               <h3 class="card-title"><a href="{{url_for('post', id=post.id)}}" class="card-title-link">{{ post.title }}</a></h3>
               <div class="card-text truncate-text"> {{ post.content|safe }} </div>
               
               <div class="d-flex justify-content-between align-items-center mt-3">
-                  <small class="text-muted">{{ post.date_posted | datetimefilter('%Y-%m-%d') }}</small>
+                  <small class="text-muted">{{ post.date_posted | dateformat }}</small>
                   <small class="text-muted">
                     {% if post.poster.name %}
                     By: {{ post.poster.name }}
