--- a/templates/post.html
+++ b/templates/post.html
@@ -8,14 +8,24 @@
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 {% endfor %}
-
-<h1>{{ post.title }}</h1>
 <br/>
 
 
 <div class="shadow p-5 mb-5 bg-body rounded">
-    <h3>{{ post.title }}</h3>
-    <small>By: {{ post.poster.name }} | {{ post.date_posted | datetimefilter('%Y-%m-%d')}}</small><br/><br/>
+    <center><h1>{{ post.title }}</h1><br/>
+        
+    {% if post.post_img %}
+        <!-- <img class="float-end rounded-custom" src="{{ url_for('static', filename='images/'+ post.poster.profile_pic) }}" width="150"> -->
+        <img src="{{ url_for('static', filename='images/post/'+ post.post_img) }}" class="img-fluid custom-post-image "><br/>
+    {% else %}
+        <!-- <img class="float-end" src="{{ url_for('static', filename='images/default_profile.png') }}" width="150"> -->
+        <img src="..." class="img-fluid" alt="..."><br/>
+    {% endif %}<br/>
+
+    <small class="text-muted">By: {{ post.poster.name }} | {{ post.date_posted | dateformat}}</small>
+    
+    </center>
+    <br/><br/>
     {{ post.content|safe }}<br/>
     <hr>
 
@@ -23,9 +33,9 @@
         <div class="row">
             <div class="col-md-2">
                 {% if post.poster.profile_pic %}
-                    <img class="float-end rounded-custom" src="{{ url_for('static', filename='images/'+ post.poster.profile_pic) }}" width="150">
+                    <img class="float-end rounded-custom" src="{{ url_for('static', filename='images/user/'+ post.poster.profile_pic) }}" width="150">
                 {% else %}
-                    <img class="float-end" src="{{ url_for('static', filename='images/default_profile.png') }}" width="150">
+                    <img class="float-end" src="{{ url_for('static', filename='images/user/default_profile.png') }}" width="150">
                 {% endif %}
             </div>
             <div class="col-md-10">
