--- a/templates/posts.html
+++ b/templates/posts.html
@@ -15,7 +15,7 @@
 {% for post in posts %}
 <div class="shadow p-3 mb-5 bg-body rounded">
     <h3>{{ post.title }}</h3>
-    <small>By: {{ post.poster.name }} | {{ post.date_posted | datetimefilter('%Y-%m-%d') }}</small><br/><br/>
+    <small>By: {{ post.poster.name }} | {{ post.date_posted | dateformat }}</small><br/><br/>
     <span class="truncate-text">{{ post.content|safe }}</span><br/>
     {% if post.poster.about_author %}
         {{ post.poster.about_author }}
