--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,7 +11,7 @@
           <li class="nav-item">
             <a class="nav-link" href="{{url_for('posts')}}">Posts</a>
           </li>
-          {% if current_user.is_authenticated %}
+          {% if current_user.is_authenticated %} <h1>is authenticated</h1>
            
             <li class="nav-item">
               <a class="nav-link" href="{{url_for('add_post')}}">Add Post</a>
